css/style.css
@import url(http://weloveiconfonts.com/api/?family=brandico);
*{
  margin:0;
  padding:0;


}
html,body{width:100%;height:91%;}

body{         
  background:url('http://farm1.staticflickr.com/36/111023917_8de2b23011_o.jpg')no-repeat;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  font-family: 'Roboto Mono', monospace;
  font-weight: 100;
  text-align:center;
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}


/* brandico */
[class*="brandico-"]:before {
  font-family: 'brandico', sans-serif;
}



.content{width:900px; height:600px;margin:auto; margin-top: 8%;}

.welcomeText,.form,.social{ width:100%; }
/*welcome text*/
.welcome{
  height:120px;
  position:relative;
  border-bottom:1px solid;
  overflow:hidden;
}

.greet{
  width:100%;
  height:100%;
  position:absolute;
  top:100%;
  line-height:100px;
  font-size: 80px;
  text-align: center;
  background: none;
  letter-spacing: 10px;
  z-index: 6;
  
  transition:all .5s;
}
/*taglines*/
.subText{
  width:100%;
  height:100px;
  position:relative;
  font-size:20px;
  font-weight: 600;
  letter-spacing: 5px;
  overflow:hidden;
}
.subText p{
  height:100%;
  line-height:100px;
  text-align:center;

}
.subTexts{
  width:100%;
  position:absolute;
  bottom:100%;
  text-align:center;
  overflow:hidden;
  transition:all .5s;
}
/*FORM*/
.form{
  width:20%;
  height:50px;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  margin: auto;
  position:relative;
}

.sub{
  width:90%;
  height:50px;
  margin:auto;
  opacity:0;
  border:none;
  border-radius:50px;
  background:rgba(0,0,0,.05);
  box-shadow:inset 0 0 5px rgba(0,0,0,.4),0 0 0px 5px rgba(0,0,0,.1);
  transition:all .5s;
  

}

input:focus{outline:none;}

.button{
  width:100%;
  height:100%;
  border:none;
  border-radius:30px;
  font-size:22px;
  font-weight: 500;
  background-color: #49afcd;
  background-image:linear-gradient(top, #5bc0de, #2f96b4);
  cursor:pointer;
  transition:all .5s;
}

.button:hover{
  background: #2f96b4;
  box-shadow:inset 0 1px 5px rgba(0,0,0,.3);
}

/*footer-follow us*/
.social{
	margin-top: 10%;
}

.follow{
  width:100%;
  height:100px;
  position:relative;
  overflow:hidden;
}
.followUs{
  width:100%;
  height:100%;
  position:absolute;
  bottom:80%;
  line-height:100px;
  text-align:center;
  font-size:40px;
  transition:all .5s;
}

.socialIcons{
  width:100%;
  height:100px;
  position:relative;  
  overflow:hidden;
}

.socialIcon{
  width:33.33%;
  height:100px;
  float:left;
  margin-top:100px;
  font-size:50px;
  line-height:100px;
  transition:margin-top .5s,color .5s;
  cursor:pointer;
  
}
.socialIcon:hover{ color:#49afcd; text-shadow:0 0 20px white;}
.twitter{ transition-delay:.5s,0; }
.github{ transition-delay:1s,0; }

@media screen and (max-width:930px){
  .subTexts p {font-size:20px}
  .button{font-size:12px}
    .content{max-width:95%; height:80%;margin:100px auto;}
    .greet{font-size: 48px;}

}
 
@media screen and (max-width:600px){
  .welcome,.subText,.sub{background:rgba(255,255,255,.3);}
  .welcome{border-radius:20px 20px 0 0;}
  .subText{border-radius:0 0 20px 20px;}
  .sub{border:1px solid;}
  .greet{font-size:30px}
  .subTexts p {font-size:16px;}
  .button{font-size:8px;margin-right:-3%}

}

